yaml_v2/Development/FokDevRedisDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: reti-lab-foodonkontainers-redis
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis  
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis  
    spec:
      containers:
        - name: redis
          image: redis:3.2-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)"]
          ports:
            - containerPort: 6379
              name: redis
