yaml_v2/Development/FokOrdersDeployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: mssql-orders-db
spec:
  type: ExternalName
  externalName: fok.database.windows.net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fok-deployment-orders
  labels:
    app: fok-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fok-orders
  template:
    metadata:
      labels:
        app: fok-orders
    spec:
      containers:      
      - name: orderapi
        image: caretro/foodonkontainers:ordersapi_v0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcredcaretro
---
kind: Service
apiVersion: v1
metadata:
  labels:
    name: reti-lab-foodonkontainers-orders-api
  name: reti-lab-foodonkontainers-orders-api
spec:
  selector:
    app: fok-orders
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
