yaml_v2/Development/FokUsersDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fok-deployment-users
  labels:
    app: fok-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fok-users
  template:
    metadata:
      labels:
        app: fok-users
    spec:
      containers:
      - name: userapi
        image: caretro/foodonkontainers:usersapi_v0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcredcaretro
---
kind: Service
apiVersion: v1
metadata:
  labels:
    name: reti-lab-foodonkontainers-users-api
  name: reti-lab-foodonkontainers-users-api
spec:
  selector:
    app: fok-users
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-users-db
spec:
  type: ExternalName
  externalName: fok.database.windows.net
