yaml_v2/Development/FokIngressDeployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
  name: fok-ingress
spec:
  rules:
  - http: 
      paths:
      - path: /gw/?(.*)
        backend:
          serviceName: reti-lab-foodonkontainers-gateway-simple
          servicePort: 80  
      - path: /gwo/?(.*)
        backend:
          serviceName: reti-lab-foodonkontainers-gateway-ocelot
          servicePort: 80  
      - path: /?(.*)
        backend:
          serviceName: reti-lab-foodonkontainers-web-spa
          servicePort: 80
